Style sidebar, try to fix scrollbar

--- a/src/style.scss
+++ b/src/style.scss
@@ -18,17 +18,21 @@ html {
   height: -webkit-fill-available;
 }
 
+html,
 body {
   width: 100vw;
-  max-width: 100vw;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  max-width: 100%;
+  overflow-x: hidden;
 
   font-family: $font-stack;
   color: $font-color-primary;
   background-color: $color-secondary;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 // stuff for hiding / showing dynamic input field
@@ -114,7 +118,32 @@ $sidebarTransition: left 0.4s ease;
 
   background-color: $color-primary;
 
+  .favorites {
+    flex: 1 1 auto;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    padding: 1rem;
+
+    button {
+      color: $font-color-secondary;
+      font-family: $font-stack;
+      text-align: start;
+
+      background: none;
+      border: none;
+    }
+
+    button:hover {
+      color: rgb(231, 243, 245);
+    }
+  }
+
   .credits {
+    flex: 0 0 auto;
+
     text-align: center;
     padding: 0.6rem;
     font-size: 0.6rem;
